# ragify_novels

./: docker-compose.dev.yml  pyproject.toml
app/: ingest_documents.py  main.py
backend/: Dockerfile
backend/app/: ingest_documents.py  main.py  pyproject.toml
